<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".amount.AmountActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/cart_item_name" />


        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/cart_item_price" />

        <TextView
            android:id="@+id/itemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/cart_item_amount" />

        <TextView
            android:id="@+id/cartSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/cart_subtotal" />

        <TextView
            android:id="@+id/cartTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/cart_total" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/amountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>